[metadata]
name = twitter_bot_utils
version = attr: twitter_bot_utils.__version__
description = Python utilities for twitter bots
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/markdown
url = http://github.com/fitnr/twitter_bot_utils
author = Neil Freeman
author_email = contact@fakeisthenewreal.org
license = GPL-3.0
license_file = LICENSE
keywords = twitter, twitter bot
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[build-system]
build-backend = setuptools.build_meta
requires =
  setuptools >= 40.9.0
  wheel

[options]
packages = twitter_bot_utils
install_requires =
    tweepy >= 3.8.0, <4
    pyYAML >= 4.2

[options.entry_points]
console_scripts =
    tbu = twitter_bot_utils.cli:main
